# video-transcribe

./: README.md  pyproject.toml
src/video_transcribe/: __init__.py  __main__.py  audio.py  cli.py  correct.py  diarize.py  formats.py  llm_correct.py  merge.py  mux.py  punctuate.py  transcribe.py  tui.py  tui_catalog.py  tui_doctor.py  tui_highlight.py  tui_stream.py  voiceprint.py
tests/: eval_cache.npz  eval_matching.py  real_check.py  smoke.py  tui_check.py
