[project]
name = "video-transcribe"
version = "0.1.0"
description = "Transcribe speech from video/audio files locally using faster-whisper."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
dependencies = [
    "faster-whisper>=1.1.0",
]

[project.scripts]
video-transcribe = "video_transcribe.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/video_transcribe"]
