[project]
name = "video-transcribe"
version = "0.1.0"
description = "Transcribe speech from video/audio files locally using faster-whisper."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
dependencies = [
    "faster-whisper>=1.1.0",
]

[project.optional-dependencies]
# Speaker diarization (who-said-what). Heavy: pulls in torch + pyannote.
# Install with:  uv sync --extra diarize
diarize = [
    "pyannote.audio>=3.1",
    "torch>=2.2",
    "torchaudio>=2.2",
]
# Punctuation + capitalisation + sentence segmentation for Whisper's run-on
# output. Uses onnxruntime (already pulled in by faster-whisper), so it's light.
# Install with:  uv sync --extra readable   (combine: --extra diarize --extra readable)
readable = [
    "punctuators>=0.0.5",
]
# Optional LLM-assisted correction pass (video_transcribe.llm_correct) -- sends
# transcript text to the Claude API. Needs ANTHROPIC_API_KEY (or `ant auth login`).
# Install with:  uv sync --extra llm
llm = [
    "anthropic>=0.69",
]

[project.scripts]
video-transcribe = "video_transcribe.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/video_transcribe"]
